# mrfixit

./: .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  LICENSE copy  Makefile  README copy.md  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/redis/: Dockerfile
.github/workflows/: checks.yml
docs/: db.puml
mrfixit/: __main__.py  config.py
mrfixit/adapters/database/: __main__.py  config.py  di.py  tables.py  uow.py  utils.py
mrfixit/adapters/database/converters/: tech_request.py
mrfixit/adapters/database/migrations/: env.py
mrfixit/adapters/database/migrations/versions/: 2025_06_15_2074caa0b55c_.py
mrfixit/adapters/database/storages/: tech_request.py
mrfixit/application/: config.py  exceptions.py
mrfixit/domains/: di.py
mrfixit/domains/entities/: common.py  tech_request.py
mrfixit/domains/interfaces/storages/: tech_request.py
mrfixit/domains/services/: tech_request.py
mrfixit/domains/utils/: last_day_of_month_validator.py  month_transformer.py
mrfixit/presenters/bot/: config.py  di.py  exception_handlers.py  router.py  service.py
mrfixit/presenters/bot/content/buttons/: ask_question.py  common.py  tech_request.py
mrfixit/presenters/bot/content/emojies/: common.py
mrfixit/presenters/bot/content/messages/: tech_request.py
mrfixit/presenters/bot/dialogs/: states.py
mrfixit/presenters/bot/dialogs/tech_request/: __init__.py  formatters.py  getters.py  handlers.py  initial_handlers.py  selections.py  windows.py
mrfixit/presenters/bot/dialogs/utils/: handlers.py
mrfixit/presenters/bot/middlewares/: group.py  middlewares.py
mrfixit/presenters/bot/services/: tech_request_cron.py
mrfixit/presenters/bot/utils/: inline_query.py  manager.py  message_remover.py
tests/: conftest.py  utils.py
tests/adapters/database/: test_migrations.py
tests/adapters/database/storages/: test_tech_request.py
tests/domains/services/: test_tech_request.py
tests/plugins/factories/: tech_request.py
tests/plugins/instances/: db.py  services.py  storages.py
