[tool.poetry]
name = "mrfixit"
version = "0.1.0"
description = ""
authors = [
    "Eljan T <straxisrule@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiomisc = {extras = ["aiohttp", "asgiref"], version = "^17.5.24"}
aiomisc-dependency = "^0.1.20"
aiocache = "^0.12.2"
aiogram = "^3.15.0"
aiogram-dialog = "2.3.1"
redis = "^5.0.8"
httpx = "^0.28.1"
types-requests = "^2.32.0.20241016"
dishka = "^1.4.2"
asyncly = "^0.3.3"
msgspec = "^0.18.6"
SQLAlchemy = "^2.0.36"
alembic = "^1.16.1"
asyncpg = "^0.30.0"
uvloop = "^0.21.0"
granian = "^1.6.4"
pydantic = {extras = ["email"], version = "^2.10.3"}
aiobotocore = "^2.22.0"
croniter = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
coverage = "^7.6.9"
mypy = "^1.12.1"
ruff = "^0.8.2"
polyfactory = "^2.18.1"
pre-commit = "^4.0.1"
dirty-equals = "^0.8.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "test_*"
python_functions = "test_*"
python_classes = "TestSuite*"
addopts = "-p no:cacheprovider"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["mrfixit"]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
]
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "BLE",
    "C90",
    "E",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "PLE",
    "Q",
    "RUF006",
    "RUF100",
    "T10",
    "T20",
    "TID",
    "UP",
    "W",
]
ignore = ["ISC001"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["mrfixit", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "py_expression_eval.*",
    "asyncpg.*",
]
ignore_missing_imports = true